Fix: Corrected colour of tour group list items to match rest so active was more visible

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -5,7 +5,7 @@
 } 
 
 .dropdown-item {
-    color: #fff;
+    color: rgba(255, 255, 255, 0.5);
 }
 
 /*------------Header-------------*/
